@@ -223,6 +223,7 @@ namespace eval ::testClock {
 	[dict create \
 	     HKEY_CURRENT_USER\\Control\ Panel\\International \
 	     [dict create \
+		  locale 0409 \
 		  sShortDate dd-MMM-yyyy \
 		  sLongDate "'the' dd''' day of' MMMM yyyy" \
 		  sTimeFormat "h:mm:ss tt"] \
@@ -35954,7 +35955,7 @@ test clock-49.2 {regression test - missing time zone file (Bug 1237907)} \
     } \
     -body {
 	list [::tcl::clock::GuessWindowsTimeZone] \
-	    [clock format 0 -locale system -format "%X %Z"] \
+	    [clock format 0 -locale system -format "%H:%M:%S %Z"] \
 	    [clock format -86400 -format "%Y"]
     } \
     -cleanup {
@@ -35975,7 +35976,7 @@ test clock-49.2 {regression test - missing time zone file (Bug 1237907)} \
 	    :America/New_York
 	::tcl::clock::ClearCaches
     } \
-    -result {<-0500>+05:00:00<-0400>+04:00:00,M4.1.0/02:00:00,M10.5.0/02:00:00 { 7:00:00 PM -0500} 1969}
+    -result {<-0500>+05:00:00<-0400>+04:00:00,M4.1.0/02:00:00,M10.5.0/02:00:00 {19:00:00 -0500} 1969}
 
 test clock-50.1 {format / scan -1 as a local time} {
     if {[catch {
